Setting table tag and td,tr  - 1: 뷰포트의 변화에 따른 table의 변화를 막기위하여 table-layout:fixed사용  - 2: 뷰포트의 변화에 따른 table 안의 td,tr에서의 font가 overflow되는 것을 막기위해 overflow:hidden 사용

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,16 @@ a {
   text-decoration: none !important;
 
 }
+
+table {
+  table-layout: fixed;
+}
+
+table th,
+table td {
+  overflow: hidden;
+}
+
+body {
+  font-size: 14px;
+}
